src/compiler/BroLangParser.py
# Generated from src/grammar/BroLang.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BroLangParser ( Parser ):

    grammarFileName = "BroLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'dawg'", "'gg'", "'my g'", "'='", "';'", 
                     "'yolo'", "'('", "')'", "'pls'", "'{'", "'}'", "'sus'", 
                     "'let him cook'", "'until'", "'#'", "'::'", "'say no more'", 
                     "'say'", "','", "'*'", "'/'", "'%'", "'+'", "'-'", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'?'", 
                     "':'", "'<<'", "'>>'", "'&'", "'^'", "'|'", "'&&'", 
                     "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "UNICODE_CHARS", "ID", "DECIMAL", "NEWLINE", "Whitespace" ]

    RULE_prog = 0
    RULE_block = 1
    RULE_command = 2
    RULE_declaration = 3
    RULE_assignment = 4
    RULE_ifthenelse = 5
    RULE_whileBlock = 6
    RULE_forBlock = 7
    RULE_forRange = 8
    RULE_print = 9
    RULE_println = 10
    RULE_vals = 11
    RULE_data = 12
    RULE_multiplicative = 13
    RULE_additive = 14
    RULE_relational = 15
    RULE_equality = 16
    RULE_conditionalExpr = 17
    RULE_shift = 18
    RULE_and = 19
    RULE_exclusiveOr = 20
    RULE_inclusiveOr = 21
    RULE_logicalAnd = 22
    RULE_logicalOr = 23
    RULE_expression = 24
    RULE_terminalData = 25
    RULE_identifier = 26
    RULE_number = 27
    RULE_string = 28

    ruleNames =  [ "prog", "block", "command", "declaration", "assignment", 
                   "ifthenelse", "whileBlock", "forBlock", "forRange", "print", 
                   "println", "vals", "data", "multiplicative", "additive", 
                   "relational", "equality", "conditionalExpr", "shift", 
                   "and", "exclusiveOr", "inclusiveOr", "logicalAnd", "logicalOr", 
                   "expression", "terminalData", "identifier", "number", 
                   "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    UNICODE_CHARS=40
    ID=41
    DECIMAL=42
    NEWLINE=43
    Whitespace=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(BroLangParser.BlockContext,0)


        def EOF(self):
            return self.getToken(BroLangParser.EOF, 0)

        def getRuleIndex(self):
            return BroLangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = BroLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(BroLangParser.T__0)
            self.state = 59
            self.block()
            self.state = 60
            self.match(BroLangParser.T__1)
            self.state = 61
            self.match(BroLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BroLangParser.CommandContext)
            else:
                return self.getTypedRuleContext(BroLangParser.CommandContext,i)


        def getRuleIndex(self):
            return BroLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = BroLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199023673416) != 0):
                self.state = 63
                self.command()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(BroLangParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(BroLangParser.AssignmentContext,0)


        def ifthenelse(self):
            return self.getTypedRuleContext(BroLangParser.IfthenelseContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(BroLangParser.WhileBlockContext,0)


        def forBlock(self):
            return self.getTypedRuleContext(BroLangParser.ForBlockContext,0)


        def forRange(self):
            return self.getTypedRuleContext(BroLangParser.ForRangeContext,0)


        def print_(self):
            return self.getTypedRuleContext(BroLangParser.PrintContext,0)


        def println(self):
            return self.getTypedRuleContext(BroLangParser.PrintlnContext,0)


        def getRuleIndex(self):
            return BroLangParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = BroLangParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.ifthenelse()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.whileBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 73
                self.forBlock()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.forRange()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 75
                self.print_()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 76
                self.println()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(BroLangParser.IdentifierContext,0)


        def data(self):
            return self.getTypedRuleContext(BroLangParser.DataContext,0)


        def getRuleIndex(self):
            return BroLangParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = BroLangParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(BroLangParser.T__2)
            self.state = 80
            self.identifier()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 81
                self.match(BroLangParser.T__3)
                self.state = 82
                self.data()


            self.state = 85
            self.match(BroLangParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(BroLangParser.IdentifierContext,0)


        def data(self):
            return self.getTypedRuleContext(BroLangParser.DataContext,0)


        def getRuleIndex(self):
            return BroLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = BroLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.identifier()
            self.state = 88
            self.match(BroLangParser.T__3)
            self.state = 89
            self.data()
            self.state = 90
            self.match(BroLangParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfthenelseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.true_block = None # BlockContext
            self.false_block = None # BlockContext

        def expression(self):
            return self.getTypedRuleContext(BroLangParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BroLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(BroLangParser.BlockContext,i)


        def getRuleIndex(self):
            return BroLangParser.RULE_ifthenelse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfthenelse" ):
                listener.enterIfthenelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfthenelse" ):
                listener.exitIfthenelse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfthenelse" ):
                return visitor.visitIfthenelse(self)
            else:
                return visitor.visitChildren(self)




    def ifthenelse(self):

        localctx = BroLangParser.IfthenelseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifthenelse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(BroLangParser.T__5)
            self.state = 93
            self.match(BroLangParser.T__6)
            self.state = 94
            self.expression()
            self.state = 95
            self.match(BroLangParser.T__7)
            self.state = 96
            self.match(BroLangParser.T__8)
            self.state = 97
            self.match(BroLangParser.T__9)
            self.state = 98
            localctx.true_block = self.block()
            self.state = 99
            self.match(BroLangParser.T__10)
            self.state = 100
            self.match(BroLangParser.T__11)
            self.state = 101
            self.match(BroLangParser.T__9)
            self.state = 102
            localctx.false_block = self.block()
            self.state = 103
            self.match(BroLangParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(BroLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(BroLangParser.BlockContext,0)


        def getRuleIndex(self):
            return BroLangParser.RULE_whileBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileBlock" ):
                listener.enterWhileBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileBlock" ):
                listener.exitWhileBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileBlock" ):
                return visitor.visitWhileBlock(self)
            else:
                return visitor.visitChildren(self)




    def whileBlock(self):

        localctx = BroLangParser.WhileBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(BroLangParser.T__12)
            self.state = 106
            self.match(BroLangParser.T__6)
            self.state = 107
            self.expression()
            self.state = 108
            self.match(BroLangParser.T__7)
            self.state = 109
            self.match(BroLangParser.T__9)
            self.state = 110
            self.block()
            self.state = 111
            self.match(BroLangParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.pre = None # BlockContext
            self.post = None # BlockContext
            self.loop = None # BlockContext

        def expression(self):
            return self.getTypedRuleContext(BroLangParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BroLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(BroLangParser.BlockContext,i)


        def getRuleIndex(self):
            return BroLangParser.RULE_forBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForBlock" ):
                listener.enterForBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForBlock" ):
                listener.exitForBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForBlock" ):
                return visitor.visitForBlock(self)
            else:
                return visitor.visitChildren(self)




    def forBlock(self):

        localctx = BroLangParser.ForBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(BroLangParser.T__13)
            self.state = 114
            self.match(BroLangParser.T__6)
            self.state = 115
            localctx.pre = self.block()
            self.state = 116
            self.match(BroLangParser.T__14)
            self.state = 117
            self.expression()
            self.state = 118
            self.match(BroLangParser.T__14)
            self.state = 119
            localctx.post = self.block()
            self.state = 120
            self.match(BroLangParser.T__7)
            self.state = 121
            self.match(BroLangParser.T__9)
            self.state = 122
            localctx.loop = self.block()
            self.state = 123
            self.match(BroLangParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.start = None # ExpressionContext
            self.end = None # ExpressionContext

        def identifier(self):
            return self.getTypedRuleContext(BroLangParser.IdentifierContext,0)


        def block(self):
            return self.getTypedRuleContext(BroLangParser.BlockContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BroLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BroLangParser.ExpressionContext,i)


        def getRuleIndex(self):
            return BroLangParser.RULE_forRange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForRange" ):
                listener.enterForRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForRange" ):
                listener.exitForRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForRange" ):
                return visitor.visitForRange(self)
            else:
                return visitor.visitChildren(self)




    def forRange(self):

        localctx = BroLangParser.ForRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forRange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(BroLangParser.T__13)
            self.state = 126
            self.match(BroLangParser.T__6)
            self.state = 127
            localctx.start = self.expression()
            self.state = 128
            self.match(BroLangParser.T__15)
            self.state = 129
            self.identifier()
            self.state = 130
            self.match(BroLangParser.T__15)
            self.state = 131
            localctx.end = self.expression()
            self.state = 132
            self.match(BroLangParser.T__7)
            self.state = 133
            self.match(BroLangParser.T__9)
            self.state = 134
            self.block()
            self.state = 135
            self.match(BroLangParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vals(self):
            return self.getTypedRuleContext(BroLangParser.ValsContext,0)


        def getRuleIndex(self):
            return BroLangParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = BroLangParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(BroLangParser.T__16)
            self.state = 138
            self.vals()
            self.state = 139
            self.match(BroLangParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintlnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vals(self):
            return self.getTypedRuleContext(BroLangParser.ValsContext,0)


        def getRuleIndex(self):
            return BroLangParser.RULE_println

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintln" ):
                listener.enterPrintln(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintln" ):
                listener.exitPrintln(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintln" ):
                return visitor.visitPrintln(self)
            else:
                return visitor.visitChildren(self)




    def println(self):

        localctx = BroLangParser.PrintlnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_println)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(BroLangParser.T__17)
            self.state = 142
            self.vals()
            self.state = 143
            self.match(BroLangParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._data = None # DataContext
            self.data_terms = list() # of DataContexts

        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BroLangParser.DataContext)
            else:
                return self.getTypedRuleContext(BroLangParser.DataContext,i)


        def getRuleIndex(self):
            return BroLangParser.RULE_vals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVals" ):
                listener.enterVals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVals" ):
                listener.exitVals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVals" ):
                return visitor.visitVals(self)
            else:
                return visitor.visitChildren(self)




    def vals(self):

        localctx = BroLangParser.ValsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_vals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            localctx._data = self.data()
            localctx.data_terms.append(localctx._data)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 146
                self.match(BroLangParser.T__18)
                self.state = 147
                localctx._data = self.data()
                localctx.data_terms.append(localctx._data)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(BroLangParser.StringContext,0)


        def expression(self):
            return self.getTypedRuleContext(BroLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BroLangParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData" ):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)




    def data(self):

        localctx = BroLangParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_data)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.string()
                pass
            elif token in [7, 41, 42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._terminalData = None # TerminalDataContext
            self.oprs = list() # of TerminalDataContexts
            self.s20 = None # Token
            self.ops = list() # of Tokens
            self.s21 = None # Token
            self.s22 = None # Token
            self._tset283 = None # Token

        def terminalData(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BroLangParser.TerminalDataContext)
            else:
                return self.getTypedRuleContext(BroLangParser.TerminalDataContext,i)


        def getRuleIndex(self):
            return BroLangParser.RULE_multiplicative

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicative" ):
                listener.enterMultiplicative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicative" ):
                listener.exitMultiplicative(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicative" ):
                return visitor.visitMultiplicative(self)
            else:
                return visitor.visitChildren(self)




    def multiplicative(self):

        localctx = BroLangParser.MultiplicativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_multiplicative)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            localctx._terminalData = self.terminalData()
            localctx.oprs.append(localctx._terminalData)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0):
                self.state = 158
                localctx._tset283 = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0)):
                    localctx._tset283 = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                localctx.ops.append(localctx._tset283)
                self.state = 159
                localctx._terminalData = self.terminalData()
                localctx.oprs.append(localctx._terminalData)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._multiplicative = None # MultiplicativeContext
            self.oprs = list() # of MultiplicativeContexts
            self.s23 = None # Token
            self.ops = list() # of Tokens
            self.s24 = None # Token
            self._tset310 = None # Token

        def multiplicative(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BroLangParser.MultiplicativeContext)
            else:
                return self.getTypedRuleContext(BroLangParser.MultiplicativeContext,i)


        def getRuleIndex(self):
            return BroLangParser.RULE_additive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditive" ):
                listener.enterAdditive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditive" ):
                listener.exitAdditive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditive" ):
                return visitor.visitAdditive(self)
            else:
                return visitor.visitChildren(self)




    def additive(self):
